<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mainbackground">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/numOneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="9"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="79dp"
            android:layout_height="46dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/numTwoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="9"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:text="Num 1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:text="Num 2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="120dp"
        android:text="@string/division_n"
        android:textColor="#fff"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:text="@string/addition_n"
        android:textColor="#fff"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiplicar"
        app:layout_constraintEnd_toStartOf="@+id/btnRestar"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="56dp"
        android:text="@string/substract_n"
        android:textColor="#fff"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnDividir"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/multiplication_n"
        android:textColor="#fff"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDividir"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="map"
        android:textColor="#fff"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>