...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SumarView"
    android:background="@drawable/sumabackground">

    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="@string/go_back"
        android:textColor="#fff"
        app:backgroundTint="#000000"
...
